--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cap = "0.1.2"
 clap = { version = "4.5.32", features = ["derive"] }
 rayon = "1.10.0"
