--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bio = "2.2.0"
 cap = "0.1.2"
 clap = { version = "4.5.32", features = ["derive"] }
 rayon = "1.10.0"
